--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
   db:
     container_name: admin_db
     image: mysql:5.7.22
+    restart: always
     environment:
       MYSQL_DATABASE: admin
       MYSQL_USER: root
